Initial page commit 1

--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -29,13 +29,9 @@
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="algorytmy.html">Algorytmy i struktury danych</a></li>
-                                <li><a href="systemyoperacyjne.html">Systemy operacyjne</a></li>
                                 <li><a href="podstawyprogramowania.html">Podstawy programowania</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Konsultacje</a></li>
-                        <li><a href="#">Aktualności</a></li>
                     </ul>
 
 
@@ -58,7 +54,7 @@
                     </ul>
                     <h3>Listy zadań</h3>
                     <ul>
-                        <li>Lista zadań jest publikowana przed rozpoczęciem zajęć.</li>
+                        <li><a href="zadanie1.html">Lista 1</a></li>
                     </ul>
 
 
