added link to falling factorial

--- a/zadanie1.html
+++ b/zadanie1.html
@@ -43,7 +43,7 @@
                         <li>Napisać program, który sprawdzi którą liczbą w ciągu zdefiniowanym poniżej jest 14918<br>
                         <ins>Pierwszym elementem ciągu jest 1.
                             n-ty element oblicza się przez zsumowanie elementu n-1 z sumą cyfr jego rozwinięcia dziesiętnego.</ins></li>
-                        <li>Napisać funkcję zwracającą k-tą potęgę opadającą liczby całkowitej n</li>
+                        <li>Napisać funkcję zwracającą k-tą <a href="http://mathworld.wolfram.com/FallingFactorial.html">potęgę opadającą</a> liczby całkowitej n</li>
 
                     </ol>
                 </div>
