Added footer with generation time, moved to liquid template system

--- a/zadanie1.html
+++ b/zadanie1.html
@@ -1,56 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Bartłomiej Antosik - strona domowa</title>
-    <meta name="viewport" content="width=device-width,
-              initial-scale=1.0">
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" >
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
-</head>
-<body>
-<div class="container">
-    <div class="row">
-        <div class="span12">
-            <div class="page-header">
-                <h1>Bartłomiej Antosik     <small>Politechnika Wrocławska</small></h1>
-            </div>
-            <div class="row">
-                <div class="span4">
-                    <ul class="nav nav-pills nav-stacked">
-                        <li>
-                            <a href="index.html">O mnie</a>
-                        </li>
-                        <li class="dropdown active">
-                            <a class="dropdown-toggle"
-                               data-toggle="dropdown"
-                               href="#">
-                                Dydaktyka
-                                <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="podstawyprogramowania.html">Podstawy programowania</a></li>
-                            </ul>
-                        </li>
-                   </ul>
+---
+layout: default
+title: Podstawy programowania zadania
+maincategory: dydaktyka
+---
+<h3>Lista 1</h3>
+<ol>
+    <li>Napisać program, który sprawdzi czy liczby całkowite podane jako parametry programy sumują się do 0.</li>
+    <li>Napisać program, który sprawdzi którą liczbą w ciągu zdefiniowanym poniżej jest 14918<br>
+        <ins>Pierwszym elementem ciągu jest 1.
+            n-ty element oblicza się przez zsumowanie elementu n-1 z sumą cyfr jego rozwinięcia dziesiętnego.</ins></li>
+    <li>Napisać funkcję zwracającą k-tą <a href="http://mathworld.wolfram.com/FallingFactorial.html">potęgę opadającą</a> liczby całkowitej n</li>
 
-
-                </div>
-                <div class="span8">
-                    <h3>Lista 1</h3>
-                    <ol>
-                        <li>Napisać program, który sprawdzi czy liczby całkowite podane jako parametry programy sumują się do 0.</li>
-                        <li>Napisać program, który sprawdzi którą liczbą w ciągu zdefiniowanym poniżej jest 14918<br>
-                        <ins>Pierwszym elementem ciągu jest 1.
-                            n-ty element oblicza się przez zsumowanie elementu n-1 z sumą cyfr jego rozwinięcia dziesiętnego.</ins></li>
-                        <li>Napisać funkcję zwracającą k-tą <a href="http://mathworld.wolfram.com/FallingFactorial.html">potęgę opadającą</a> liczby całkowitej n</li>
-
-                    </ol>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-</body></html>
+</ol>
