Added git ignore and office hours

--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -19,6 +19,10 @@ maincategory: dydaktyka
     <li>Dolne progi wymagane do zaliczenia na podaną oceną : bdb 80%, db+ 70%, db 60%, dst+ 55%, dst 50%</li>
     <li>Trzykrotna nieobecność skutkuje uzyskaniem oceny niedostatecznej</li>
 </ul>
+<h3>
+Konsultacje
+</h3>
+        <p>Poniedziałek 7:30, pokój 107a/D2</p>
 <h3>Listy zadań</h3>
 <ul>
     <li><a href="/zadanie1">Lista 1</a></li>
