--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -26,4 +26,5 @@ Konsultacje
 <h3>Listy zadań</h3>
 <ul>
     <li><a href="/zadanie1">Lista 1</a></li>
+    <li><a href="/zadanie2">Lista 2</a></li>
 </ul>
