--- a/zadanie2.html
+++ b/zadanie2.html
@@ -9,9 +9,9 @@ maincategory: dydaktyka
         <a href="http://en.wikipedia.org/wiki/Libor#Calculation">LIBOR</a> dla dolara amerykańskiego (w poprzednim był poważny błąd).
         Program na podstawie propozycji wielkości oprocentowania 18 banków, oblicza średnią ucinaną
         oraz wypisuje wynik na standardowe wyjście.</li>
-    <li>Napisz program, który dla liczb podanych w argumentach wiersza poleceń liczb całkowitych, oblicza ich sumę
-    a następnie weryfikuje czy liczba ta jest palindromem (131 jest palindromem, 105 nie jest)</li>
+    <li>Napisz program, który dla podanych w argumentach wiersza poleceń liczb całkowitych, oblicza ich sumę
+    a następnie weryfikuje czy suma ta jest palindromem (131 jest palindromem, 105 nie jest)</li>
     <li>Napisz program, który dla zadanej w argumencie wiersza poleceń liczby naturalnej wypisuje na standardowe
-    wyjście liczby, dla których zarówno reprezentacja w systemie dziesiętnym jak i szesnastkowym jest palindromem.</li>
+    wyjście liczby naturalne mniejsze od niej, dla których zarówno reprezentacja w systemie dziesiętnym jak i szesnastkowym jest palindromem.</li>
 
 </ol>
