--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -27,4 +27,5 @@ Konsultacje
 <ul>
     <li><a href="/zadanie1">Lista 1</a></li>
     <li><a href="/zadanie2">Lista 2</a></li>
+    <li><a href="/zadanie3">Lista 3</a></li>
 </ul>
