--- a/zadanie3.html
+++ b/zadanie3.html
@@ -6,12 +6,13 @@ maincategory: dydaktyka
 <h3>Lista 3</h3>
 <ol>
     <li>Napisz program który kopiuje zawartość jednego pliku do drugiego. Nazwy plików wejściowego i wynikowego
-    zadane są jako parametry wiersza poleceń. Użyj klasy <code>FileInputReader</code> i <code>FileInputReader</code> </li>
+    zadane są jako parametry wiersza poleceń. Użyj klasy <code>FileInputStream</code> i <code>FileOutputStream</code> </li>
     <li>
         Zmień program 1 z listy 2, tak aby liczby były wypisywane do pliku którego nazwa zadana jest w wierszu poleceń
-        zamiast na standardowe wyjście. Użyj klasy <code>PrintWriter</code>
+        zamiast na standardowe wyjście. Użyj klasy <code>PrintWriter</code>. W jakiej sytuacji flushowany jest strumień wyjściowy 
+        przy korzystaniu z tej klasy?
     </li>
     <li>Wczytaj ze standardowego wejścia dane o pacjentach w szpitalu. Zdefiniuj klasę <code>Pacjent</code>,
     przechowującą dane: imię, nazwisko, wiek i waga. Kolejne atrybuty oddzielone są przecinkami, kolejne rekordy
-    oddzielone są znakami końca linii</li>
+    oddzielone są znakami końca linii. </li>
 </ol>
