--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -28,4 +28,5 @@ Konsultacje
     <li><a href="/zadanie1">Lista 1</a></li>
     <li><a href="/zadanie2">Lista 2</a></li>
     <li><a href="/zadanie3">Lista 3</a></li>
+    <li><a href="/zadanie4">Lista 4</a></li>
 </ul>
