--- a/zadanie4.html
+++ b/zadanie4.html
@@ -4,8 +4,8 @@ title: Podstawy programowania zadania
 maincategory: dydaktyka
 ---
 <h3>Lista 4</h3>
-<ol>
-    Niepunktowane zadania
+<p>Niepunktowane zadania</p>
+    <ol>
     <li>
         Wczytaj ze standardowego wejścia wymiary prostopadłościennego klocka oraz prostokątnego otworu.
         Napisz program, który decyduje czy klocek mieści się w otworze.
@@ -13,5 +13,23 @@ maincategory: dydaktyka
     <li>Wyszukaj w tablicy liczb całkowitych, liczbę która zapisana jest na jak najmniejszej liczbie bitów.
     </li>
     <li>Oblicz częstości występowania poszczególnych liter w tekście wczytanym z pliku
-    </li>
-</ol>
+    </ol>
+
+    <p>Punktowane zadania (maks. 3 pkt) (29.11.2014)</p>
+        <ol>
+            <li>Napisz program, który dla wczytanego na standardowe wejście tekstu, oblicza ile znajduje się w nim samogłosek,
+                i wypisuje tą liczbę na standardowe wyjście (1 pkt)
+            </li>
+            <li>Napisz program, który dla zadanego na standardowe wejście tekstu, obliczy jaki jest największy poziom wcięć,
+                czyli znaków tabulacji następujących zaraz po znaku nowej linii.
+                Obliczona wartość będzie wypisana na standardowy strumień wyjściowy. W dodatkowej linii ma zostać wypisana
+                wartość logiczna zdania: "Dla każdej linii, jeśli poziom wcięcia w danej linii jest większy niż w poprzedzającej
+                to jest większy dokładnie o 1."
+                (2 pkt)
+            </li>
+            <li>
+                Napisz program, który dla dwóch zadanych na wejście godzin zapisanych w formacie godzina:minuta, wypisuje na
+                strumień standardowego wyjścia kąt pomiędzy wskazówkami godzinowymi wskazującymi te godziny na wskazówkowym zegarze 12-godzinnym.
+                Program ma obliczać mniejszy z kątów. Albo wskazywać ;)(3 pkt).
+            </li>
+        </ol>
