--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -29,4 +29,5 @@ Konsultacje
     <li><a href="/zadanie2">Lista 2</a></li>
     <li><a href="/zadanie3">Lista 3</a></li>
     <li><a href="/zadanie4">Lista 4</a></li>
+    <li><a href="/zadanie5">Lista 5</a></li>
 </ul>
