--- a/zadanie4.html
+++ b/zadanie4.html
@@ -33,3 +33,13 @@ maincategory: dydaktyka
                 Program ma obliczać mniejszy z kątów. Albo wskazywać ;)(3 pkt).
             </li>
         </ol>
+     <p>Punktowane zadania (maks. 3 pkt) (5.11.2014)</p>
+        <ol>
+            <li>Napisz program, który dla ciągu liczb zadanego na standardowe wejście, określa czy dowolne dwie sąsiadujące w tym ciągu liczby
+            nie różnią się o więcej niż wskazuje liczba przekazana w parametrze wiersza poleceń. (1 pkt)
+            </li>
+            <li>Napisz program, który oblicza średnią długość słowa w tekście wpisanym na standardowe wejście i wypisuje ją na standardowe wyjście (2 pkt)</li>
+            <li>Na standardowe wejście w pierwszej linii podany jest ciąg codziennych odczytów temperatury ciała pacjenta.
+            W każdej kolejnej linii podane są po dwa indeksy dni w których mierzono temperaturę pacjenta. Dla każdej linii
+            z indeksami dni, wypisz różnicę pomiędzy maksymalną a minimalną temperaturą odczytaną między tymi dniami. (3 pkt)</li>
+        </ol>
