--- a/zadanie5.html
+++ b/zadanie5.html
@@ -9,4 +9,13 @@ maincategory: dydaktyka
 <li>Na przyjęciu spotyka się n osób, należących do 3 paczek. Każda osoba należy do jakiejś paczki, ale może należeć do więcej niż jednej
     paczki. Każda osoba ma możliwość przywitania się z każdą inną, ale skorzysta z niej tylko gdy druga osoba należy do tej samej paczki (przynajmniej jednej).
     Napisz program obliczający dla zadanych przez użytkownika paczek, ile będzie uścisków dłoni</li>
+<li>
+    Otrzymałeś słowo zaszyfrowane nieznanym
+    <a href="http://en.wikipedia.org/wiki/Substitution_cipher#Simple_substitution">prostym szyfrem podstawieniowym</a>.
+    Jedyne co wiadomo o tym słowie to to, że pochodzi
+    z ustalonego <a href="https://raw.githubusercontent.com/eneko/data-repository/master/data/words.txt">słownika</a>. Napisz program, który dla zadanego w linii poleceń szyfrogramu i ścieżki do pliku
+    ze słownikiem, wypisuje na standardowe wyjście te wyrazy ze słownika, które po zaszyfrowaniu pewnym szyfrem podstawieniowym
+    mogą dać zadany szyfrogram.
+</li>
+
 </ol>
