--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -23,6 +23,7 @@ maincategory: dydaktyka
 Konsultacje
 </h3>
         <p>Poniedziałek 7:30, pokój 107a/D2</p>
+        <p>Dodatkowy termin konsultacji, w czwartek 16.12.2014, w sali 127a/D2</p>
 <h3>Listy zadań</h3>
 <ul>
     <li><a href="/zadanie1">Lista 1</a></li>
