--- a/podstawyprogramowania.html
+++ b/podstawyprogramowania.html
@@ -31,4 +31,5 @@ Konsultacje
     <li><a href="/zadanie3">Lista 3</a></li>
     <li><a href="/zadanie4">Lista 4</a></li>
     <li><a href="/zadanie5">Lista 5</a></li>
+    <li><a href="/zadanie6">Lista 6</a></li>
 </ul>
